Fix: Make flex gap adaptive

--- a/src/components/socials/Socials.css
+++ b/src/components/socials/Socials.css
@@ -3,6 +3,8 @@
 }
 
 .Socials__icons {
+  --gap: clamp(1.8rem, 15vw, 3.2rem);
+
   padding-top: 2.4rem;
   border-top: 1px solid hsl(var(--clr-white));
 
